fix: adjust gap in order data input layout

--- a/src/index.css
+++ b/src/index.css
@@ -693,7 +693,7 @@ section {
 .loginform {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 8px;
   padding: 0 25px;
 }
 
